--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.1
   modal_progress_hud_nsn: ^0.4.0
+  rflutter_alert: ^2.0.7
 
 dev_dependencies:
   flutter_test:
